2004-08-10  Jamey Sharp  <jamey@minilop.net>

	* src/xcb_out.c:
	I misread the BIG-REQUESTS specification. The long
	length field needs to count itself too.

2004-07-24  Jamey Sharp  <jamey@minilop.net>

	* src/client-c.xcb:
	Renamed functions that return new iterators to
	*Iter, to avoid conflict with similar functions that
	return arrays.

	Deprecating ARRAYFIELD in favor of LISTFIELD, which
	now generates both array and iterator accessors. You
	get an array accessor as long as the element type is
	fixed length; you get an interator accessor as long
	as the base type has an iterator. You always get a
	'Length' function.

2004-07-24  Jamey Sharp  <jamey@minilop.net>

	* src/xcb_auth.c:
	Bart cleaned up some code that I made ugly, and
	I'm fixing a warning that resulted from a static
	function being created but not necessarily used.

2004-07-07  Jamey Sharp  <jamey@minilop.net>

	* src/xcb_xid.c:
	OK, it might be a good idea to commit something
	that compiles. I thought I'd tested this change...

2004-07-06  Jamey Sharp  <jamey@minilop.net>

	* src/xcbint.h:
	* src/xcb_xid.c:
	Added support for the XC-Misc extension's ability
	to request more XIDs from the server when the
	client runs out of them.

2004-07-06  Jamey Sharp  <jamey@minilop.net>

	* src/xcb.h.m4:
	* src/xcb_auth.c:
	* src/xcb_util.c:
	Removed XCBNextNonce, and the nonce parameter of
	XCBGetAuthInfo, from the API. XCB can compute
	that just fine without help from the application.

2004-07-06  Jamey Sharp  <jamey@minilop.net>

	* src/Makefile.am:
	Importing part of patches, adding SYNC, by
	Mikko Markus Torni <mikko.markus.torni@iki.fi>.
	This needed better padding computation in XCB
	before it could be implemented cleanly.

2004-07-02  Jamey Sharp  <jamey@minilop.net>

	* src/Makefile.am:
	Importing part of patches, adding XC-MISC, by
	Mikko Markus Torni <mikko.markus.torni@iki.fi>.

2004-07-02  Jamey Sharp  <jamey@minilop.net>

	* src/xcb.h.m4:
	* src/xcb_in.c: